fixed z-index issue on Project page

--- a/css/index.css
+++ b/css/index.css
@@ -249,7 +249,7 @@ div.btn:hover {
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 4;
   padding: 13px 6.4%;
 }
 .top-nav nav .nav-button {
@@ -277,7 +277,7 @@ div.btn:hover {
   top: 50px;
   left: 50%;
   transform: translate(-50%);
-  z-index: 4;
+  z-index: 5;
   opacity: 0.9;
 }
 footer {
@@ -783,21 +783,13 @@ footer .footer-container .footer-state-blocks .footer-CA-block {
     margin-bottom: 22px;
   }
 }
-.services-content-box
-  .services-content-item
-  .services-content-item-description {
+.services-content-box .services-content-item .services-content-item-description {
   width: 98%;
 }
-.services-content-box
-  .services-content-item
-  .services-content-item-description
-  p {
+.services-content-box .services-content-item .services-content-item-description p {
   line-height: 2.5rem;
 }
-.services-content-box
-  .services-content-item
-  .services-content-item-description
-  p:first-child {
+.services-content-box .services-content-item .services-content-item-description p:first-child {
   margin-bottom: 30px;
 }
 .tab-box-selected {
@@ -1042,7 +1034,7 @@ footer .footer-container .footer-state-blocks .footer-CA-block {
   height: 40px;
   width: 40px;
   opacity: 0.6;
-  z-index: 3;
+  z-index: 2;
 }
 .resCarousel img,
 .comCarousel img {
@@ -1054,7 +1046,7 @@ footer .footer-container .footer-state-blocks .footer-CA-block {
 }
 .hover-box {
   position: absolute;
-  z-index: 2;
+  z-index: 3;
   height: 100%;
   display: flex;
   flex-direction: column;
