--- a/less/navigation.less
+++ b/less/navigation.less
@@ -6,7 +6,7 @@
   width: 100%;
   position: fixed;
   top: 0;
-  z-index: 2;
+  z-index: 4;
   padding: 13px 6.4%;
 
   nav {
@@ -38,7 +38,7 @@
       top: 50px;
       left: 50%;
       transform: translate(-50%);
-      z-index: 4;
+      z-index: 5;
       opacity: 0.9;
     }
   }
